# i3-swallow

./: .deepsource.toml  .gitignore  LICENSE  Makefile  README.md  i3-swallow  i3sw  pyproject.toml  swallow  swallow.mkv  swallow.py
i3_swallow/: __init__.py  swallow.py
